--- a/ProjetSession/ProjetSession.csproj
+++ b/ProjetSession/ProjetSession.csproj
@@ -16,6 +16,7 @@
     <None Remove="AjoutProjetContent.xaml" />
     <None Remove="PageAfficherEmploye.xaml" />
     <None Remove="PageAfficherProjet.xaml" />
+    <None Remove="PageAjoutProjet.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +43,11 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="PageAjoutProjet.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="AjouterEmploye.xaml">
