--- a/ProjetSession/ProjetSession.csproj
+++ b/ProjetSession/ProjetSession.csproj
@@ -16,6 +16,7 @@
     <None Remove="AjouterEmploye.xaml" />
     <None Remove="AjoutProjetContent.xaml" />
     <None Remove="connexion.xaml" />
+    <None Remove="creerCompte.xaml" />
     <None Remove="PageAfficherClient.xaml" />
     <None Remove="PageAfficherEmploye.xaml" />
     <None Remove="PageAfficherProjet.xaml" />
@@ -59,6 +60,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="creerCompte.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="PageAfficherClient.xaml">
