--- a/ProjetSession/ProjetSession.csproj
+++ b/ProjetSession/ProjetSession.csproj
@@ -20,6 +20,7 @@
     <None Remove="PageAfficherClient.xaml" />
     <None Remove="PageAfficherEmploye.xaml" />
     <None Remove="PageAfficherProjet.xaml" />
+    <None Remove="PageZoomProjet.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -60,6 +61,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="PageZoomProjet.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="creerCompte.xaml">
