--- a/ProjetSession/ProjetSession.csproj
+++ b/ProjetSession/ProjetSession.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="AjoutClientContent.xaml" />
+    <None Remove="AjoutEmployeProjet.xaml" />
     <None Remove="AjouterEmploye.xaml" />
     <None Remove="AjoutProjetContent.xaml" />
     <None Remove="connexion.xaml" />
@@ -61,6 +62,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="AjoutEmployeProjet.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="PageZoomProjet.xaml">
